# course_work_beta

./: README.md  config.py  pyproject.toml
data/: operations.xls
data/reports/: 20231207_223643_filter_transactions_report.csv  20231207_230322_filter_transactions_report.csv
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
tests/test_data/: path_for_test.py  test_operations.xls  test_report_filename.csv
